# scitex-dataset

./: .envrc  .gitattributes  .gitignore  CHANGELOG.md  README.md  codecov.yml  pyproject.toml
.github/ci/: build-in-sif.sh  publish-in-sif.sh  run-in-sif.sh
.github/workflows/: ci.yml  cla.yml  docs.yml  import-smoke-on-ubuntu-py3-12.yml  pr-ci.yml  publish-pypi.yml  pypi-publish-and-github-release-on-tag.yml  pytest-matrix-on-ubuntu-py3-11-3-12-3-13.yml  release-ci.yml  rtd-sphinx-build-on-ubuntu-latest.yml  scitex-dataset-quality-audit-on-ubuntu-latest.yml  test.yml
.scitex/dataset/: config.yaml
.scitex/dataset/runtime/: README.md
.scitex/dev/: cli-audit-dict.yaml  config.yaml
docs/adr/: 0001-for-solver-answer-leak-handling.md
docs/sphinx/: cli_reference.rst  conf.py  index.rst  installation.rst  quickstart.rst  sources.rst
docs/sphinx/api/: scitex_dataset.rst
examples/: 00_run_all.sh  01_fetch_openneuro.py  02_search_datasets.py  03_cli_usage.sh  04_mcp_server.py  quickstart.py
src/scitex_dataset/: __init__.py  __main__.py  _api.py  _branding.py  _config.py  _gate_plugin.py  _sources.py  database.py
src/scitex_dataset/_cli/: __init__.py  _agentic.py  _db.py  _factory.py  _groups.py  _mcp_commands.py  _skills.py
src/scitex_dataset/_mcp/: server.py  tools.py
src/scitex_dataset/_sphinx_html/: .buildinfo  cli_reference.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js  sources.html
src/scitex_dataset/ai_for_science/: __init__.py  _base.py  _corebench_download.py  _gate.py  _manifest.py  _score.py  _sigfig.py  _sources.py  _standardize.py  _validate.py  biomysterybench.py  bixbench.py  corebench.py
src/scitex_dataset/general/: __init__.py  huggingface.py
src/scitex_dataset/neuroscience/: gin.py  openneuro.py
tests/: conftest.py  test_cli.py  test_database.py  test_examples.py
tests/develop/: test_audit.py
tests/examples/: test_01_fetch_openneuro.py  test_02_search_datasets.py  test_03_cli_usage.py  test_04_mcp_server.py  test_quickstart.py
tests/general/: test_huggingface.py
tests/integration/: test_cross_package_imports.py  test_examples.py
tests/scitex_dataset/: test__branding.py  test__gate_plugin.py  test_database.py  test_search.py
tests/scitex_dataset/_cli/: test__groups.py  test__introspect.py
tests/scitex_dataset/_mcp/: test_tools.py
tests/scitex_dataset/ai_for_science/: test___init__.py  test__base.py  test__conformance.py  test__corebench_download.py  test__gate.py  test__manifest.py  test__score.py  test__sigfig.py  test__sources.py  test__standardize.py  test__validate.py  test_biomysterybench.py  test_bixbench.py  test_corebench.py
tests/scitex_dataset/biology/: test_geo.py
tests/scitex_dataset/general/: test_huggingface.py  test_zenodo.py
tests/scitex_dataset/medical/: test_clinicaltrials.py
(+87 files in other folders)
