[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scitex-dataset"
version = "0.3.9"
description = "Multi-domain scientific dataset fetcher — neuroscience, biology, pharmacology, medical (OpenNeuro, DANDI, PhysioNet, GEO, ChEMBL, ClinicalTrials.gov)"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.10"
authors = [
    { name = "Yusuke Watanabe", email = "noreply@scitex.ai" },
]
keywords = [
    "neuroscience",
    "datasets",
    "openneuro",
    "dandi",
    "physionet",
    "bids",
    "nwb",
    "mri",
    "eeg",
    "fmri",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "httpx>=0.24.0",
    "click>=8.0.0",
    "scitex-dev>=0.11.7",
    "scitex-config>=0.3.0",
]

[project.optional-dependencies]
mcp = [
    "fastmcp>=2.0.0",
]
huggingface = [
    "huggingface-hub>=0.20.0",
]
dev = [
    "fastmcp>=2.0.0",
    "huggingface-hub>=0.20.0",
    "pre-commit>=3.5.0",
    "pytest-cov>=4.0.0",
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=2.0",
    "sphinx-copybutton>=0.5",
    "sphinx-autodoc-typehints>=1.25",
    "sphinx-click>=5.0",
]
all = [
    "scitex-dataset[mcp]",
    "scitex-dataset[huggingface]",
]

[project.scripts]
scitex-dataset = "scitex_dataset._cli:main"

[project.entry-points."scitex_dev.docs"]
scitex-dataset = "scitex_dataset"

[project.entry-points."scitex_dev.skills"]
scitex-dataset = "scitex_dataset"

[project.urls]
Homepage = "https://github.com/ywatanabe1989/scitex-dataset"
Documentation = "https://scitex-dataset.readthedocs.io"
Repository = "https://github.com/ywatanabe1989/scitex-dataset.git"
Issues = "https://github.com/ywatanabe1989/scitex-dataset/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/scitex_dataset"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.coverage.run]
parallel = true
source = ["scitex_dataset"]
branch = true
concurrency = ["multiprocessing", "thread"]
omit = ["*/__pycache__/*", "*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
show_missing = true

[tool.scitex-linter]
library_dirs = ["src", "tests", "examples"]
